# network-observer

./: .gitignore  Cargo.toml  README.md  dockerfile
gui/: index.html  package-lock.json  package.json
gui/src/: App.tsx  index.css  theme.ts  types.ts
gui/src/components/: Header.tsx  HostTable.tsx  LiveFeed.tsx  MessageInbox.tsx  MessageToast.tsx  NetworkGraph.tsx  PacketTable.tsx  PeerTable.tsx  SessionTable.tsx  Sidebar.tsx  TabBar.tsx
gui/src/components/ui/: index.tsx
gui/src/context/: ApiContext.tsx
gui/src/hooks/: usePolling.ts  useWebSocket.ts
gui/src/utils/: api.ts  config.ts  format.ts
src/: api.rs  capture.rs  constants.rs  discovery.rs  file_transfer.rs  helper.rs  main.rs  mdns.rs  message.rs  parser.rs  processing.rs  scanner.rs  tls.rs  types.rs
