[package]
name = "network_sniffer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
etherparse = "0.19.0"
futures = "0.3.32"
oui-data = "0.2.1"
pcap = "2.4.0"
pnet = "0.35.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mdns-sd = "0.18.2"
